# crTools

./: .gitignore  README.md  start.sh
backend/: auth.py  config.py  connectivity_manager.py  database.py  db.sqlite3  main.py  migrate_user_types.py  models.py  modify_test_data.py  pyproject.toml  run.py  schemas.py  test_cleanup.py  test_simple_cleanup.py
backend/migrations/: remove_vpn_status_time.py  update_vpn_structure.py
backend/models/: __init__.py  admin.py  aiToolModel.py  commandModel.py  deviceModel.py  groupModel.py  systemModel.py  vpnModel.py
backend/routers/: ai_tool.py  auth.py  command.py  device.py  operationLog.py  router_auth.py  system.py  user.py  vpn.py
backend/scheduler/: __init__.py  scheduler.py
backend/user-files/: 工作簿1.xlsx
backend/utils/: notification.py
frontend/: auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  test.ts
frontend/src/api/: aiTool.ts  auth.ts  command.ts  device.ts  index.ts  operationLog.ts  system.ts  user.ts  vpn.ts
frontend/src/layout/: LayoutView.vue
frontend/src/router/: index.ts
frontend/src/stores/: index.ts  user.ts
frontend/src/views/: AITool.vue  CommandCollection.vue  DashboardView.vue  DeviceManagement.vue  ProfileView.vue
frontend/src/views/admin/: SystemSettings.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/error/: NotFound.vue
frontend/src/views/system/: LoginLogs.vue  MenuManagement.vue  OperationLogs.vue  VPNConfig.vue  (+3 more)
